--- a/Flexbox in 20 minutes/index.html
+++ b/Flexbox in 20 minutes/index.html
@@ -8,6 +8,10 @@
     <style>
       .container-1 {
         display: flex;
+        /* align-items: flex-start; */
+        /* align-items: flex-end; */
+        /* align-items: center; */
+        /* flex-direction: column; */
       }
 
       .container-1 div {
