--- a/Flexbox in 20 minutes/index.html
+++ b/Flexbox in 20 minutes/index.html
@@ -6,15 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlexBox in 20 minutes</title>
     <style>
-      .container-1 {
-        display: flex;
-        /* align-items: flex-start; */
-        /* align-items: flex-end; */
-        /* align-items: center; */
-        /* flex-direction: column; */
+      @media (min-width: 468px) {
+        .container-1 {
+          display: flex;
+          /* align-items: flex-start; */
+          /* align-items: flex-end; */
+          /* align-items: center; */
+          /* flex-direction: column; */
+        }
+        .container-2 {
+          display: flex;
+          /* justify-content: flex-start; */
+          justify-content: space-between;
+        }
       }
 
-      .container-1 div {
+      .container-1 div,
+      .container-2 div,
+      .container-3 div {
         border: 1px solid #ccc;
         padding: 10px;
       }
@@ -33,6 +42,19 @@
         flex: 1;
         order: 3;
       }
+
+      .container-2-box {
+        flex-basis: 27%;
+      }
+
+      .container-3-box {
+        flex-basis: 15%;
+      }
+
+      .container-3 {
+        display: flex;
+        flex-wrap: wrap;
+      }
     </style>
   </head>
   <body>
@@ -48,6 +70,90 @@
       <div class="box-3">
         <h3>Box Three</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+
+    <div class="container-2">
+      <div class="container-2-box">
+        <h3>Box Four</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="container-2-box">
+        <h3>Box Five</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="container-2-box">
+        <h3>Box Six</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </div>
+
+    <div class="container-2">
+      <div class="container-2-box">
+        <h3>Box Four</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+      <div class="container-2-box">
+        <h3>Box Five</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+      <div class="container-2-box">
+        <h3>Box Six</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+    </div>
+
+    <div class="container-3">
+      <div class="container-3-box">
+        <h3>Box Seven</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+      <div class="container-3-box">
+        <h3>Box Eight</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+      <div class="container-3-box">
+        <h3>Box Nine</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+      <div class="container-3-box">
+        <h3>Box Ten</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+      <div class="container-3-box">
+        <h3>Box Eleven</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
+      </div>
+      <div class="container-3-box">
+        <h3>Box Twelve</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec elit urna. Suspendisse a erat a nibh imperdiet fermentum. In eleifend ultricies massa, id pretium purus
+          convallis nec.
+        </p>
       </div>
     </div>
   </body>
